java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/IDEA67592.java

interface A
{
  interface B  { }
}

interface D
{
  interface B  { }
}

interface C extends A, D
{
  interface E extends <error descr="Reference to 'B' is ambiguous, both 'A.B' and 'D.B' match">B</error> {}
}